[gd_scene load_steps=8 format=2]

[ext_resource path="res://Singletons/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/music/Victory Music.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/music/Nostaglia Theme (upbeat).ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/music/Boss Battle.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/music/Nostaglia Theme.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/music/default.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/soundeffects/default.ogg" type="AudioStream" id=7]

[node name="Sound Manager" type="Node"]
script = ExtResource( 1 )

[node name="Music" type="Node" parent="."]

[node name="BossTheme" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 4 )

[node name="VictoryMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 2 )

[node name="NostalgiaThemeUpbeat" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 3 )

[node name="NostalgiaTheme" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 5 )

[node name="default" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 6 )

[node name="SoundEffects" type="Node" parent="."]

[node name="default" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 7 )
